--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
 
             <input class="nav-search-input" type="search" placeholder="Search fastest cars">
-            <div class="nav-search-icon"><a href="#" target="_blank"><i class="fa-solid fa-magnifying-glass"></i></a></div>
+            <div class="nav-search-icon"><a><i class="fa-solid fa-magnifying-glass"></i></a></div>
             
             <div class="bar-items-container">
                 <div class="items-flex">
